...
        menu?.leftSide = true
        navigationItem.leftBarButtonItem = UIBarButtonItem(image: UIImage(systemName: "sidebar.leading"), style: .plain, target: self, action: #selector(showMenu))
        greeting.font = .preferredFont(forTextStyle: .title1)
        greeting.numberOfLines = 0
        greeting.adjustsFontForContentSizeCategory = true
        signInButton.setTitle(String(localized: "loginButton"), for: .normal)
        signInButton.accessibilityIdentifier = "accountSignInButton"
        signInButton.addTarget(self, action: #selector(signIn), for: .touchUpInside)
        table.dataSource = self
        table.delegate = self
        table.register(UITableViewCell.self, forCellReuseIdentifier: "setting")
        [greeting, signInButton, table].forEach {
            $0.translatesAutoresizingMaskIntoConstraints = false
...
