...
        table.dataSource = self
        table.register(BusStopTableViewCellSetup.self, forCellReuseIdentifier: BusStopTableViewCellSetup.identifer)
        table.refreshControl = refresh
        refresh.addTarget(self, action: #selector(loadStops), for: .valueChanged)
        status.titleLabel?.numberOfLines = 0
        status.titleLabel?.textAlignment = .center
        status.accessibilityIdentifier = "stopsStatus"
        status.addTarget(self, action: #selector(loadStops), for: .touchUpInside)
        table.backgroundView = status
        table.translatesAutoresizingMaskIntoConstraints = false
        view.addSubview(table)
        NSLayoutConstraint.activate([
            table.topAnchor.constraint(equalTo: view.safeAreaLayoutGuide.topAnchor),
...
