...
        view.addSubview(testcard)
        view.addSubview(addCardButton)
        testcard.translatesAutoresizingMaskIntoConstraints = false
        addCardButton.translatesAutoresizingMaskIntoConstraints = false
        addCardButton.setTitle(String(localized: "addCardButton"), for: .normal)
        addCardButton.addTarget(self, action: #selector(pressed), for: .touchUpInside)
        addCardButton.accessibilityIdentifier = "scanCardButton"
        NSLayoutConstraint.activate([
            testcard.topAnchor.constraint(equalTo: view.safeAreaLayoutGuide.topAnchor, constant: 32),
            testcard.centerXAnchor.constraint(equalTo: view.centerXAnchor),
            testcard.widthAnchor.constraint(equalTo: view.safeAreaLayoutGuide.widthAnchor, constant: -40),
            testcard.heightAnchor.constraint(equalToConstant: 215),
            addCardButton.topAnchor.constraint(equalTo: testcard.bottomAnchor, constant: 16),
...
